page template change for small module padding option

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -26,7 +26,11 @@ layout: default
 {%- endif -%}
 
 <!-- Module -->
+{%- if page.moduleSize == 'small' -%}
+<section class="module-sm module-divider-bottom">
+{%- else -%}
 <section class="module module-divider-bottom">
+{%- endif -%}
   {%- if page.container == 'fluid' -%}
     <div class="container-fluid">
   {%- else -%}
