comments for troubleshooting

--- a/_layouts/repertoire.html
+++ b/_layouts/repertoire.html
@@ -55,6 +55,10 @@ layout: page
 			        {%- endif -%}
 			      </p>
 					</div>
+					{% else %}
+					<!-- Piece Title: {{ piece.title }} -->
+					<!-- Page Title: {{ page.title }} -->
+					<!-- ---------------------------- -->
           {%- endif -%}
         {%- endfor -%}
       {%- endfor -%}
