--- a/_layouts/repertoire.html
+++ b/_layouts/repertoire.html
@@ -48,7 +48,7 @@ layout: page
 				        <a href="{{ performance.url }}"><img class="img-fluid mb-3 mb-md-0" src="{{ site.images }}/concert-thumbnails/{{ performance.thumbnail }}" alt=""></a>
 							</div>
 				      {%- endif -%}
-							<div class="col-sm-8 location-details">
+							<div class="col-sm-8 mb-3 location-details">
 								{{ performance.date | date_to_long_string }} <br />
 								{%- if performance.event -%}{{ performance.event }}<br />{%- endif -%}
 								{%- if performance.location.institution -%}{{ performance.location.institution }}{%- endif -%}{%- if performance.location.building -%}, {{ performance.location.building }}<br />{%- endif -%}
