fix portfolio spelling

--- a/_layouts/repertoire.html
+++ b/_layouts/repertoire.html
@@ -73,7 +73,7 @@ layout: page
     </div>
   </div>
 	<div class="col-lg-4 order-1 order-md-2 pb-4">
-		<div class="portfoli-details border-left">
+		<div class="portfolio-details border-left">
 			<h2 class="text-left">About the work:</h2>
 			<ul>
 				<li>
