correct portfolio-details spelling in core template file

--- a/_layouts/concert.html
+++ b/_layouts/concert.html
@@ -55,7 +55,7 @@ layout: default
 
       </div>
 			<div class="col-lg-4">
-				<div class="portfoli-details border-left">
+				<div class="portfolio-details border-left">
 					<ul>
 						<li>
 							<h5>Date:</h5>
