--- a/_layouts/concert.html
+++ b/_layouts/concert.html
@@ -121,27 +121,8 @@ layout: default
 <!-- Performance Pagination-->
 <section class="module module-divider-top">
 	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
-				<h4 class="text-uppercase text-center m-b-50">More Performances</h4>
-			</div>
-		</div>
-    <!--
-    <div class="row">
-      <div class="pagination">
-        {% if paginator.previous_page %}
-          <a href="{{ paginator.previous_page_path }}" class="previous">Previous</a>
-        {% else %}
-          <span class="previous">Previous</span>
-        {% endif %}
-        <span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
-        {% if paginator.next_page %}
-          <a href="{{ paginator.next_page_path }}" class="next">Next</a>
-        {% else %}
-          <span class="next ">Next</span>
-        {% endif %}
-      </div>
-    -->
-    </div>
+
+    {% include more-performances.html %}
+
   </div>
 </section>
