--- a/_includes/more-performances.html
+++ b/_includes/more-performances.html
@@ -5,7 +5,7 @@
 </div>
 
 <div class="row blog-magazine">
-	<div class="col-6">
+	<div class="col-md-6">
 		{%- if page.previous and page.previous.categories contains 'performance' -%}
 			<!-- Post-->
 			<article class="post">
@@ -39,7 +39,7 @@
 		{% else %}
 		{%- endif -%}
 	</div>
-	<div class="col-6">
+	<div class="col-md-6">
 		{%- if page.next and page.next.categories contains 'performance' -%}
 			<!-- Post-->
 			<article class="post">
