--- a/_includes/home-latest-news.html
+++ b/_includes/home-latest-news.html
@@ -4,7 +4,7 @@
 		{%- for post in newsPosts limit:2 -%}
 		{% comment %} <span><strong>{{ post.title }}</strong>. {{ post.excerpt | remove: '<p>' | remove: '</p>' }} <a href="{{ post.url }}"><i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i></a></span> {% endcomment %}
 			<li>
-				<span class="post-date">{{ post.date | date_to_long_string }}</span>
+				<span class="post-date">{{ post.date | date: "%B %d, %Y" }}</span>
 				<a href="{{ post.url }}">
 					<strong>{{ post.title }}</strong>. {{ post.content | remove: '<p>' | remove: '</p>' | truncatewords: 20 }}
 				</a>
