--- a/_includes/more-performances.html
+++ b/_includes/more-performances.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-md-12">
-		<h4 class="text-uppercase text-center m-b-50">More Performances</h4>
+		<h3 class="text-center m-b-50">More Performances</h3>
 	</div>
 </div>
 
