--- a/_layouts/concert.html
+++ b/_layouts/concert.html
@@ -107,9 +107,9 @@ layout: default
   <div class="container">
     <div class="row m-b-50">
       <div class="col-md-12">
-        <h2 class="single-portfolio-title">
+        <h3 class="text-center m-b-50">
           Photos from the Performance
-        </h2>
+        </h3>
         {% include photos-portfolio-masonry.html folderName=page.photosFolder %}
       </div>
     </div>
