fix rep index text display - added un-minified template css - change head - comment min-height - edit rep index

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,6 +22,6 @@
 <!-- Plugins and Icon Fonts-->
 <link href="{{ site.assets }}/css/plugins.min.css" rel="stylesheet">
 <!-- Template core CSS-->
-<link href="{{ site.assets }}/css/template.min.css" rel="stylesheet">
+<link href="{{ site.assets }}/css/template.css" rel="stylesheet">
 <!-- Switch~ CSS-->
 <link href="{{ site.assets }}/css/switch.css" rel="stylesheet">
