--- a/assets/css/switch.css
+++ b/assets/css/switch.css
@@ -96,9 +96,9 @@ footer aside .fa {
     margin-right:-100%;
 }
 
-.repertoire-item {
+/*.repertoire-item {
   min-height: 325px;
-}
+}*/
 
 /*
    GOOGLE MAPS API FOR CONCERTS
