--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,6 @@
+{% if jekyll.environment == 'production' %}
+  {% include analytics.html %}
+{% endif %}
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="">
