change from Hind to Roboto

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,7 +19,7 @@
 <meta name="theme-color" content="#ffffff">
 
 <!-- Web Fonts-->
-<link href="https://fonts.googleapis.com/css?family=Hind:400,700%7cLora:400i%7cPoppins:500,600,700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto:400,700|Lora:400i|Poppins:600,700" rel="stylesheet">
 <!-- Bootstrap core CSS-->
 <link href="{{ site.assets }}/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <!-- Plugins and Icon Fonts-->
