make donor module smaller

--- a/_includes/donors.html
+++ b/_includes/donors.html
@@ -21,7 +21,7 @@
 {% endcomment %}
 
 <!-- Accordions-->
-<section class="module">
+<section class="module-sm">
 	<div class="container">
 		<h3 class="text-center">Current Donors</h3>
 		<div class="row">
