fixed donor scroller and updated support page headers

--- a/_includes/donors.html
+++ b/_includes/donors.html
@@ -47,7 +47,7 @@
                   </div>
                 </a>
               </div>
-  						<div class="collapse" id="{{ listing.name | downcase | remove: ' ' }}">
+  						<div class="collapse show" id="{{ listing.name | downcase | remove: ' ' }}">
   							<div class="card-body">
                   {%- for donor in listing.individuals -%}
                     <p class="mb-0">{{ donor }}</p>
