--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -42,3 +42,7 @@ layout: default
   </div>
 </section>
 <!-- Module end-->
+
+{%- if page.title == "Support" -%}
+  {% include donor-scroller.html %}
+{%- endif -%}
