--- a/_includes/donor-scroller.html
+++ b/_includes/donor-scroller.html
@@ -1,8 +1,8 @@
 {%- assign donor_logos = site.static_files | where: "donor", true -%}
 
-<section class="module-sm module-gray breakout">
+<section class="module module-gray">
 	<div class="container">
-		<h3>Sponsors 2015-2017</h3>
+		<h2>Sponsors 2015-2017</h2>
 		<div class="row">
 			<div class="col-md-12">
 				<div class="owl-carousel clients-carousel">
