call for scores and sidebar layout updates

--- a/_includes/call-for-scores-sidebar.html
+++ b/_includes/call-for-scores-sidebar.html
@@ -3,6 +3,12 @@
   <li>
     <a href="{{ site.url }}/projects/call-for-scores/index.html">Current</a>
   </li>
+  <li>2017-18
+    <ul>
+      <li><a href="{{ site.url }}/projects/call-for-scores/2017-18-call-for-workshop-participation.html">Call for Workshop Participation</a></li>
+      <li><a href="{{ site.url }}/projects/call-for-scores/index.html">Winners</a></li>
+    </ul>
+  </li>
   <li>2016-17
     <ul>
       <li><a href="{{ site.url }}/projects/call-for-scores/2016-17-call-and-commission-details.html">Call for Scores Information</a></li>
