link name change

--- a/_includes/call-for-scores-sidebar.html
+++ b/_includes/call-for-scores-sidebar.html
@@ -6,7 +6,7 @@
   <li>2017-18
     <ul>
       <li><a href="{{ site.url }}/projects/call-for-scores/2017-18-call-for-workshop-participation.html">Call for Workshop Participation</a></li>
-      <li><a href="{{ site.url }}/projects/call-for-scores/index.html">Winners</a></li>
+      <li><a href="{{ site.url }}/projects/call-for-scores/index.html">Participants</a></li>
     </ul>
   </li>
   <li>2016-17
