fix thumbnails and remove concert-thumbnail folder

--- a/_includes/more-performances.html
+++ b/_includes/more-performances.html
@@ -9,7 +9,7 @@
 		{%- if page.previous and page.previous.categories contains 'performance' -%}
 			<!-- Post-->
 			<article class="post">
-				<div class="post-background" data-background="{%- if page.previous.thumbnail -%}{{ site.images }}/concert-thumbnails/{{ page.previous.thumbnail }}{%- else -%}{{ site.images }}/repertoire-images/switch_misc_1000x500px.jpg{%- endif -%}">
+				<div class="post-background" data-background="{%- if page.previous.thumbnail -%}{{ site.images }}/repertoire-images/{{ page.previous.thumbnail }}{%- else -%}{{ site.images }}/repertoire-images/switch_misc_1000x500px.jpg{%- endif -%}">
 					<div class="post-header">
 							<h2 class="post-title">
 								<a href="{{ page.previous.url }}">
@@ -43,7 +43,7 @@
 		{%- if page.next and page.next.categories contains 'performance' -%}
 			<!-- Post-->
 			<article class="post">
-				<div class="post-background" data-background="{%- if page.next.thumbnail -%}{{ site.images }}/concert-thumbnails/{{ page.next.thumbnail }}{%- else -%}{{ site.images }}/repertoire-images/switch_misc_1000x500px.jpg{%- endif -%}">
+				<div class="post-background" data-background="{%- if page.next.thumbnail -%}{{ site.images }}/repertoire-images/{{ page.next.thumbnail }}{%- else -%}{{ site.images }}/repertoire-images/switch_misc_1000x500px.jpg{%- endif -%}">
 					<div class="post-header">
 							<h2 class="post-title">
 								<a href="{{ page.next.url }}">
