--- a/_layouts/repertoire.html
+++ b/_layouts/repertoire.html
@@ -49,7 +49,7 @@ layout: page
 						<div class="row">
 							{%- if performance.thumbnail -%}
 							<div class="col-sm-4">
-				        <a href="{{ performance.url }}"><img class="img-fluid mb-3 mb-md-0" src="{{ site.images }}/concert-thumbnails/{{ performance.thumbnail }}" alt=""></a>
+				        <a href="{{ performance.url }}"><img class="img-fluid mb-3 mb-md-0" src="{{ site.images }}/repertoire-images/{{ performance.thumbnail }}" alt=""></a>
 							</div>
 				      {%- endif -%}
 							<div class="col-sm-8 mb-3 location-details">
