--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="">
 <meta name="author" content="">
+<meta name="google-site-verification" content="DgxZgPGQ0ZmXL4jAc5DF7XS1hFSvFS-c1YkYvRao-Wc" />
 
 <title>{{ page.title }}</title>
 
