--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,6 +8,7 @@ layout: default
   		<div class="row">
   			<div class="col-md-12">
   				<h1 class="h1 m-b-20">{{ page.title }}</h1>
+  				{%- if page.tagline -%}<p class="h1 m-b-20">{{ page.tagline }}</p>{%- endif -%}
   			</div>
   		</div>
   	</div>
