--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,16 @@ layout: default
   		<div class="row">
   			<div class="col-md-12">
   				<h1 class="h1 m-b-20">{{ page.title }}</h1>
+          {%- if page.author -%}
+            <p>{{ page.author }}</p>
+          {%- endif -%}
+          {%- if page.categories contains 'blog' -%}
+            {%- if page.manual-date -%}
+              <p>{{ page.manual-date }}</p>
+            {%- else -%}
+              <p>{{ page.date | date: "%B %d, %Y" }}</p>
+            {%- endif -%}
+          {%- endif -%}
   			</div>
   		</div>
   	</div>
@@ -26,11 +36,15 @@ layout: default
 {%- endif -%}
 
 <!-- Module -->
+{%- if page.moduleSize == 'small' -%}
+<section class="module-sm module-divider-bottom">
+{%- else -%}
 <section class="module module-divider-bottom">
+{%- endif -%}
   {%- if page.container == 'fluid' -%}
     <div class="container-fluid">
   {%- else -%}
-    <div class="container">
+    <div class="container {% if page.categories contains 'blog' -%}w-75{%- endif -%}">
   {%- endif -%}
 
     {{ content }}
