added meta tags for social media sharing

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,14 @@
 <meta name="description" content="">
 <meta name="author" content="">
 <meta name="google-site-verification" content="DgxZgPGQ0ZmXL4jAc5DF7XS1hFSvFS-c1YkYvRao-Wc" />
+{% if page.headerImage %}
+  <meta property="og:image" content="{{ site.images }}/{{ page.headerImage }}" />
+{% endif %}
+{% if page.postDescription %}
+  <meta property="og:description" content="{{ page.postDescription }}" />
+{% else %}
+  <meta property="og:description" content="{{ page.excerpt }}" />
+{% endif %}
 
 <title>{{ page.title }}</title>
 
