a few updates - 5 latest news and concert posts - footer layout so news/concerts are one column and contact is another - clicking header goes to concerts page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,24 +1,7 @@
 <footer class="footer">
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-lg-4">
-        <!-- Text widget-->
-        <aside class="widget widget_text">
-          <div class="widget-title">
-            <h5>Contact</h5>
-          </div>
-            <p>Get in touch. We would love to hear from you.</p>
-            <div class="col-md-6 mx-auto">
-              <div class="d-flex justify-content-between">
-                <a href="mailto:switchensemble@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-                <a href="https://www.facebook.com/SwitchEnsemble/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                <a href="https://twitter.com/switchensemble"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                <a href="https://www.instagram.com/switchensemble/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-              </div>
-            </div>
-        </aside>
-      </div>
-      <div class="col-md-6 col-lg-4">
+      <div class="col-sm-6">
         <!-- Recent entries widget-->
         <aside class="widget widget_recent_entries">
           <div class="widget-title">
@@ -27,7 +10,7 @@
           {% include home-latest-performances.html %}
         </aside>
       </div>
-      <div class="col-md-6 col-lg-4">
+      <div class="col-sm-6">
         <!-- Recent entries widget-->
         <aside class="widget widget_recent_entries">
           <div class="widget-title">
@@ -44,6 +27,26 @@
           <div class="tagcloud"><a href="#">Design</a><a href="#">Travel</a><a href="#">Startup</a><a href="#">Music</a><a href="#">Portfolio</a><a href="#">Responsive</a></div>
         </aside>
       </div> -->
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <!-- Text widget-->
+        <aside class="widget widget_text">
+          <div class="widget-title">
+            <h5>Contact</h5>
+          </div>
+            <p class="text-center">Get in touch. We would love to hear from you.</p>
+            <div class="col-md-6 mx-auto">
+              <div class="d-flex justify-content-between">
+                <a href="mailto:switchensemble@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+                <a href="https://www.facebook.com/SwitchEnsemble/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                <a href="https://twitter.com/switchensemble"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                <a href="https://www.instagram.com/switchensemble/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+              </div>
+            </div>
+        </aside>
+      </div>
+
     </div>
   </div>
   <div class="footer-copyright">
