--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <!-- Logos-->
     <div class="inner-header">
-      <a class="inner-brand" href="/">
+      <a class="inner-brand" href="{{ site.url }}/concerts/">
         <img class="brand-dark" src="{{ site.images }}/switch-white-icon.png" height="30" width="36" alt="[~]">
         <img class="brand-light" src="{{ site.images }}/switch-white-icon.png" height="30" width="36" alt="[~]">
       </a></div>
