--- a/_includes/concert_listing.html
+++ b/_includes/concert_listing.html
@@ -5,6 +5,8 @@
     {% else %}
       <a href="{{ concert.url }}"><img class="img-fluid mb-3 mb-md-0" src="{{ site.images }}/repertoire-images/switch_misc_1000x500px.jpg" alt=""></a>
     {%- endif -%}
+    {%- if concert.describe -%}{{ concert.describe }}<br />{%- endif -%}
+
   </div>
   <div class="col-12 col-md-7">
     <h3 class="text-left mb-2">{{ concert.date | date: "%B %d, %Y" }}</h3>
