--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div class="container">
     <div class="row">
-      <div class="col-sm-6">
+      <div class="col-sm-5">
         <!-- Recent entries widget-->
         <aside class="widget widget_recent_entries">
           <div class="widget-title">
@@ -10,6 +10,7 @@
           {% include home-latest-performances.html %}
         </aside>
       </div>
+        <div class="col-sm-1"></div>
       <div class="col-sm-6">
         <!-- Recent entries widget-->
         <aside class="widget widget_recent_entries">
@@ -19,6 +20,8 @@
           {% include home-latest-news.html %}
         </aside>
       </div>
+
+
       <!-- <div class="col-md-6 col-lg-3">
         <aside class="widget widget_tag_cloud">
           <div class="widget-title">
