--- a/_includes/concert_listing.html
+++ b/_includes/concert_listing.html
@@ -1,5 +1,5 @@
 <div class="row mb-5">
-  <div class="col-12 col-md-3">
+  <div class="col-12 col-md-">
     {%- if concert.thumbnail -%}
       <a href="{{ concert.url }}"><img class="img-fluid mb-3 mb-md-0" src="{{ site.images }}/repertoire-images/{{ concert.thumbnail }}" alt=""></a>
     {% else %}
@@ -7,11 +7,6 @@
     {%- endif -%}
     {%- if concert.describe -%}{{ concert.describe }}<br />{%- endif -%}
   </div>
-<<<<<<< HEAD
-=======
-  <div class="col-12 col-md-2"></div>
-
->>>>>>> 8a80ea63822b1a09d791c846b063db39bb6f413e
   <div class="col-12 col-md-7">
     <h3 class="text-left mb-2">{{ concert.date | date: "%B %d, %Y" }}</h3>
     {%- if concert.location.country -%}
