--- a/_includes/concert_listing.html
+++ b/_includes/concert_listing.html
@@ -1,9 +1,9 @@
 <div class="row mb-5">
   <div class="col-12 col-md-">
     {%- if concert.thumbnail -%}
-      <a href="{{ concert.url }}"><img class="img-fluid mb-3 mb-md-0" src="{{ site.images }}/repertoire-images/{{ concert.thumbnail }}" alt=""></a>
+      <a href="{{ concert.url }}"><img class="img-fluid mb-3 mb-md-0" src="{{ site.images }}/{{ concert.thumbnail }}" alt=""></a>
     {% else %}
-      <a href="{{ concert.url }}"><img class="img-fluid mb-3 mb-md-0" src="{{ site.images }}/repertoire-images/switch_misc_1000x500px.jpg" alt=""></a>
+      <a href="{{ concert.url }}"><img class="img-fluid mb-3 mb-md-0" src="{{ site.images }}/switch_misc_1000x500px.jpg" alt=""></a>
     {%- endif -%}
     <br><br>
     {%- if concert.describe -%}{{ concert.describe }}<br />{%- endif -%}
