fix concert listing, missing col-md-5

--- a/_includes/concert_listing.html
+++ b/_includes/concert_listing.html
@@ -1,5 +1,5 @@
 <div class="row mb-5">
-  <div class="col-12 col-md-">
+  <div class="col-12 col-md-5">
     {%- if concert.thumbnail -%}
       <a href="{{ concert.url }}"><img class="img-fluid mb-3 mb-md-0" src="{{ site.images }}/{{ concert.thumbnail }}" alt=""></a>
     {% else %}
