--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -41,21 +41,38 @@
             <p class="text-center">Get in touch. We would love to hear from you.</p>
 
 
-            To sign up for our mailing list, <button onclick="showMailingPopUp(); return false;" id="open-popup" class="btn btn-link btn-sm">click here.</button>
-
+            To sign up for our mailing list, <button onclick="showPopup(); return false;" id="show-popup" class="btn btn-link btn-sm">click here.</button>
+<!--
             <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script>
 
     <!--        <script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us10.list-manage.com","uuid":"193ef51b6e3ed72a827210ea8","lid":"a945776cae","uniqueMethods":true}) })</script>
 -->
-
+<!--
           <script>
             function showMailingPopUp() {
             require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us10.list-manage.com","uuid":"193ef51b6e3ed72a827210ea8","lid":"a945776cae"}) })
-            document.cookie = 'MCPopupClosed=;path=/;expires=Thu, 01 Jan 1970 00:00:00 UTC;';
-            document.cookie = 'MCPopupSubscribed=;path=/;expires=Thu, 01 Jan 1970 00:00:00 UTC;';
             };
             document.getElementById(“open-popup”).onclick = function() {showMailingPopUp()};
             </script>
+-->
+
+
+
+
+
+            <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script>
+
+            <script type="text/javascript">
+              function showPopup() {
+                  window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us10.list-manage.com","uuid":"193ef51b6e3ed72a827210ea8","lid":"a945776cae","uniqueMethods":true}) });
+            //unsetting the cookie
+              document.cookie = "MCPopupClosed=; expires=Thu, 01 Jan 1970 00:00:00 UTC";
+              document.cookie = "MCPopupSubscribed=; expires=Thu, 01 Jan 1970 00:00:00 UTC";
+              }
+
+              document.getElementById("show-popup").onclick = function() { showPopup(); }
+
+
 
 
 
