--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -73,10 +73,10 @@
               document.getElementById("show-popup").onclick = function() { showPopup(); }
 
 
+</script>
 
 
-
-          <!--
+        <!--
          To sign up for our mailing list, <button onclick="showMailingPopUp(); return false;" id="open-popup">click here.</button>
 
             <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script>
