--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -41,7 +41,7 @@
             <p class="text-center">Get in touch. We would love to hear from you.</p>
 
 
-            To sign up for our mailing list, <button onclick="showPopup(); return false;" id="show-popup" class="btn btn-link btn-sm">click here.</button>
+            <p class="text-center">    To sign up for our mailing list, <button onclick="showPopup(); return false;" id="show-popup" class="btn-subscribe">click here.</button></p>
 <!--
             <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script>
 
