--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -41,7 +41,7 @@
             <p class="text-center">Get in touch. We would love to hear from you.</p>
 
 
-            <p class="text-center">    To sign up for our mailing list, <button onclick="showPopup(); return false;" id="show-popup" class="btn-subscribe">click here.</button></p>
+            <center>    To sign up for our mailing list, <button onclick="showPopup(); return false;" id="show-popup" class="btn-subscribe">click here.</button></center>
 <!--
             <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script>
 
@@ -64,7 +64,7 @@
 
             <script type="text/javascript">
               function showPopup() {
-                  window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us10.list-manage.com","uuid":"193ef51b6e3ed72a827210ea8","lid":"a945776cae"}) });
+                  window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us10.list-manage.com","uuid":"193ef51b6e3ed72a827210ea8","lid":"a945776cae","uniqueMethods":true}) });
             //unsetting the cookie
               document.cookie = "MCPopupClosed=; expires=Thu, 01 Jan 1970 00:00:00 UTC";
               document.cookie = "MCPopupSubscribed=; expires=Thu, 01 Jan 1970 00:00:00 UTC";
