--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -41,7 +41,7 @@
             <p class="text-center">Get in touch. We would love to hear from you.</p>
 
 
-            <center>    To sign up for our mailing list, <button onclick="showPopup(); return false;" id="show-popup" class="btn-subscribe">click here.</button></center>
+            <center>    To sign up for our mailing list, <button onclick="showPopup(); return false;" id="show-popup" class="btn-subscribe"><font color="#2275d7">click here.</font></button></center>
 <!--
             <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script>
 
