photo html files

--- a/_includes/photos-navigation.html
+++ b/_includes/photos-navigation.html
@@ -11,7 +11,7 @@
       <li><a href="{{ site.url }}/media/photos/uchicago.html">University of Chicago</a></li>
 			<li><a href="{{ site.url }}/media/photos/ny-tour.html">Upstate NY Tour 2018</a></li>
 			<li><a href="{{ site.url }}/media/photos/berkeley+c4nm.html">UC Berkeley and SF C4NM</a></li>
-      <li><a href="#"></a></li>
+  <!--    <li><a href="#"></a></li>
       <li><a href="#"></a></li>
       <li><a href="#"></a></li> -->
 		</ul>
