--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -3720,7 +3720,7 @@ body.off-canvas-sidebar-open .layout {
 .portfolio-overlay {
     position: absolute;
     background: rgba(49, 49, 49, .95);
-    opacity: 0.55;
+    opacity: 0.49;
     z-index: 1;
     left: 0;
     top: 0;
@@ -3736,7 +3736,7 @@ body.off-canvas-sidebar-open .layout {
     width: 100%;
     /*opacity: 0;*/
     z-index: 1;
-    top: 40%;
+    top: 44%; /* - - CHANGED this is the height of the title text! */
     left: 0;
     text-align: center;
 }
@@ -3744,16 +3744,21 @@ body.off-canvas-sidebar-open .layout {
 .portfolio-title {
     text-transform: uppercase;
     letter-spacing: 2px;
-    line-height: 1.8;
+    line-height: 1.6;
     font-size: 12px;
     color: #fff;
     margin: 0;
+    text-shadow: 1px 1px #2a2b2c;
+
 }
 
 .portfolio-subtitle {
     font-size: 14px;
+    line-height: 1.5;
     /*opacity: .7;*/
     color: #fff;
+    text-shadow: 1px 1px #2a2b2c;
+
 }
 
 .portfolio-link {
