--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,7 +7,11 @@ layout: default
   	<div class="container">
   		<div class="row">
   			<div class="col-md-12">
-  				<h1 class="h1 m-b-20">{{ page.title }}</h1>
+          {%- if page.composer -%}
+            <h1 class="h1 m-b-20">{{ page.composer.first }} {{ page.composer.last }} <br /> <em>{{ page.title }}</em></h1>
+          {%- else -%}
+  				  <h1 class="h1 m-b-20">{{ page.title }}</h1>
+          {%- endif -%}
   				{%- if page.tagline -%}<p class="h1 m-b-20">{{ page.tagline }}</p>{%- endif -%}
   			</div>
   		</div>
@@ -19,7 +23,11 @@ layout: default
   <section class="module-page-title">
     <div class="container">
       <div class="row-page-title">
-        <h1 class="h5 text-center">{{ page.title }}</h1>
+        {%- if page.composer -%}
+          <h1 class="h5 text-center">{{ page.composer.first }} {{ page.composer.last }} - <em>{{ page.title }}</em></h1>
+        {%- else -%}
+          <h1 class="h5 text-center">{{ page.title }}</h1>
+        {%- endif -%}
       </div>
     </div>
   </section>
