updated call for score previous seasons sidebar links

--- a/_includes/call-for-scores-sidebar.html
+++ b/_includes/call-for-scores-sidebar.html
@@ -1,18 +1,18 @@
-<h3 class="text-left">Previous Seasons</h3>
+<div class="special-heading"><h3 class="text-left">Previous Seasons</h3></div>
 <ul>
   <li>
     <a href="{{ site.url }}/projects/call-for-scores/index.html">Current</a>
   </li>
   <li>2017-18
     <ul>
-      <li><a href="{{ site.url }}/projects/call-for-scores/2017-18-call-for-workshop-participation.html">Call for Workshop Participation</a></li>
-      <li><a href="{{ site.url }}/projects/call-for-scores/index.html">Participants</a></li>
+      <li><a href="{{ site.url }}/blog/2017/10/01/call-for-workshop-participation.html">Call for Workshop Participation</a></li>
+      <li><a href="{{ site.url }}/blog/2017/11/24/workshop-participants.html">Participants</a></li>
     </ul>
   </li>
   <li>2016-17
     <ul>
-      <li><a href="{{ site.url }}/projects/call-for-scores/2016-17-call-and-commission-details.html">Call for Scores Information</a></li>
-      <li><a href="{{ site.url }}/projects/call-for-scores/2016-17-winners.html">Winners</a></li>
+      <li><a href="{{ site.url }}/blog/2016/10/01/call-for-workshop-participation.html">Commissioning Prize Information</a></li>
+      <li><a href="{{ site.url }}/blog/2017/01/15/commissioning-prize-winners.html">Winners</a></li>
     </ul>
   </li>
 </ul>
